--- a/style/box.css
+++ b/style/box.css
@@ -9,14 +9,174 @@
 	display: inline-block;
 	padding: 6px;
 }
-@media (min-width: 50em) {
-	.boxActions {
-		text-align: left;
-		position: absolute;
-		top: 3%;
-		left: 3%;
-		right: 3%;
-		margin: 0;
-		border-bottom: none;
+
+/* Urban Slider Common */
+@font-face {
+    font-family: 'new_athletic_m54regular';
+    src: url('font/nike/new_athletic_m54-webfont.eot');
+    src: url('font/nike/new_athletic_m54-webfont.eot?#iefix') format('embedded-opentype'),
+         url('font/nike/new_athletic_m54-webfont.woff2') format('woff2'),
+         url('font/nike/new_athletic_m54-webfont.woff') format('woff'),
+         url('font/nike/new_athletic_m54-webfont.ttf') format('truetype'),
+         url('font/nike/new_athletic_m54-webfont.svg#new_athletic_m54regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+/* Reset */
+body {
+    margin: 0;
+    padding: 0;
+    font-family: "new_athletic_m54regular", sans-serif;
+    font-size: 18px;
+    line-height: 1.4;
+    text-align: center;
+}
+html, body {
+    height: 100%;
+}
+
+/* App Info */
+.appInfo {
+    display: none;
+	text-align: center;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 185, 255, 0.96);
+	z-index: 1029;
+}
+.demoLinks a {
+    display: inline-block;
+    font-size: 13px;
+    padding: 6px 20px 4px;
+    position: relative;
+    color: #000;
+    background: rgba(255,255,255,0.2);
+    font-family: "Roboto", sans-serif;
+    transition: all 0.4s;
+}
+.demoLinks a:hover {
+    background: rgba(255,255,255,0.6);
+    box-shadow: 0 0 5px rgba(0,0,0,0.25);
+}
+.demoLinks a.active {
+    background: #fff;
+}
+.mobile-menu-link {
+	background-image: url(../img/menu-bar.png);
+	background-position: top right;
+	background-repeat: no-repeat;
+	background-size: 72px auto;
+	background-color: rgba(255,255,255,0.75);
+    position: absolute;
+    right: 0;
+	font-size: 0;
+	width: 36px;
+    height: 36px;
+    bottom: 0;
+	transition: all 0.4s;
+    z-index: 1050;
+}
+.mobile-menu-link.active {
+	background-position: top left;
+}
+.mobile-menu-link.active + .appInfo {
+	display: block;
+	-webkit-animation: appInfoIn 0.4s;
+	animation: appInfoIn 0.4s;
+}
+.appInfo.out {
+	-webkit-animation: appInfoOut 0.4s;
+	animation: appInfoOut 0.4s;
+}
+@-webkit-keyframes appInfoIn {
+	from { opacity: 0; -webkit-transform: translateY(20%); transform: translateY(20%);}
+}
+@keyframes appInfoIn {
+	from { opacity: 0; -webkit-transform: translateY(20%); transform: translateY(20%);}
+}
+@-webkit-keyframes appInfoOut {
+	to { opacity: 0; -webkit-transform: translateY(20%); transform: translateY(20%);}
+}
+@keyframes appInfoOut {
+	to { opacity: 0; -webkit-transform: translateY(20%); transform: translateY(20%);}
+}
+
+@media only screen and (min-width: 800px) {
+    body {
+        background: #023431;
+        display: table;
+        width: 100%;
+        min-height: 644px;
+        position: relative;
+    }
+    .appInfo {
+		background: none;
+        display: block;
+        float: left;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        padding: 50px;
+        width: 50%;
+		height: auto;
+        text-align: right;
+    }
+    .appInfo h1 {
+        color: #ffffff;
+    }
+    .appInfo p {
+        color: #6fa0a5;
+        font-size: 1.2em;
+        margin: -4px 0 20px;
+    }
+    .appContainer {
+        background-image: url(../img/nexus.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+		width: 327px;
+	    height: 640px;
+        display: block;
+        float: right;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translateY(-50%);
+    }
+    .sliderContainer {
+        height: 100%;
+    }
+    .appContent {
+        position: relative;
+		width: 289px;
+	    height: 475px;
+	    overflow: visible;
+	    margin: 109px auto 0;
+    }
+	.mobile-menu-link {
+		display: none;
 	}
+	.boxActions {
+		text-align: right;
+	    border-bottom: none;
+	    padding: 0;
+	    margin: 0 -7px 20px 0;
+	}
+}
+@media only screen and (min-width: 1500px) {
+    body {
+        min-height: 715px;
+    }
+    .appContainer {
+        width: 360px;
+        height: 713px;
+    }
+    .appContent {
+        width: 320px;
+        height: 468px;
+        margin: 123px auto 0;
+    }
 }
